# ferrisume

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: publish.yml
crates/ferrisume-cli/: Cargo.toml
crates/ferrisume-cli/src/: args.rs  main.rs  watch.rs
crates/ferrisume-core/: Cargo.toml
crates/ferrisume-core/src/: templating.rs  theme.rs
crates/ferrisume-core/themes/default/: default.toml
crates/ferrisume-domain/: Cargo.toml
crates/ferrisume-domain/src/: award.rs  certificate.rs  education.rs  interest.rs  language.rs  lib.rs  location.rs  profile.rs  project.rs  publication.rs  reference.rs  resume.rs  skill.rs  volunteer.rs  work.rs
ferrisume-cli/: Cargo.toml
ferrisume-cli/src/: main.rs  watch.rs
ferrisume-core/: Cargo.toml  build.rs
ferrisume-core/src/: lib.rs  templating.rs
ferrisume-core/src/export/: pdf.rs
ferrisume-core/themes/default/templates/: resume.hbs  styles.css
ferrisume-core/themes/default/templates/partials/: header.hbs  interests.hbs  summary.hbs
ferrisume-domain/: Cargo.toml
ferrisume-domain/src/: certificate.rs  resume.rs  work.rs
src/: args.rs  main.rs  watch.rs
src/core/: mod.rs  templating.rs  theme.rs
src/core/export/: mod.rs  pdf.rs
src/domain/: mod.rs  resume.rs  skill.rs
themes/default/templates/: resume.hbs
themes/default/templates/partials/: languages.hbs  references.hbs  section.hbs  skills.hbs
