[package]
name = "ferrisume-cli"
description = "A JSON resume CLI tool"
version = "0.2.1"
license = "MIT"
repository = "https://github.com/yourusername/ferrisume"
edition = "2021"
keywords = ["cli", "json", "resume"]
categories = ["visualization", "value-formatting"]

include = ["themes/default/**"]

[dependencies]
clap = { version = "4.5.12" }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.120"
env_logger = "0.11.4"
tiny_http = "0.12.0"
notify = "6.1.1"
ws = "0.9.2"
handlebars = "6.0.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8.15"
headless_chrome = { version = "1.0.15", features = ["fetch"] }
tempfile = "3.12.0"

[[bin]]
name = "ferrisume"
path = "src/main.rs"
