[package]
name = "ferrisume-core"
description = "The core functionality of the ferrisume CLI tool"
version = "0.1.1"
edition = "2021"
build = "build.rs"
repository = "https://github.com/yourusername/ferrisume"
license = "MIT"

[dependencies]
ferrisume-domain = { path = "../ferrisume-domain", version = "0.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "6.0.0"
wkhtmltopdf = "0.4.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
toml = "0.8.15"
