[package]
name = "ferrisume-cli"
description = "A JSON resume CLI tool"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/yourusername/ferrisume"
edition = "2021"
keywords = ["cli", "json", "resume"]
categories = ["visualization", "value-formatting"]

[dependencies]
ferrisume-core = { path = "../ferrisume-core", version = "0.1" }
clap = "2.33"
log = "0.4.22"
serde_json = "1.0.120"
env_logger = "0.11.4"
tiny_http = "0.12.0"
notify = "6.1.1"
ws = "0.9.2"

[[bin]]
name = "ferrisume"
path = "src/main.rs"
